--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,13 +1,31 @@
 {% extends 'main.html' %} {% block content %}
 
+<style>
+  .home-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+</style>
+
 <h2>Home Template</h2>
 <div class="home-container">
-  <div class="">
+  <div class="browse-topic-container">
     <h3>Browse Topics</h3>
     <hr />
+
+    <div>
+      <a href="{% url 'home' %}">All</a>
+    </div>
+
+    {% for topic in topics %}
+    <div>
+      <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+    </div>
+    {% endfor %}
   </div>
 
   <div>
+    <h5>{{room_count}} room(s) available</h5>
     <h4><a href="{% url 'create-room' %}">Create Room</a></h4>
     <div>
       <ol>
