--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Discord Clone</title>
-</head>
-<body>
+  </head>
+  <body>
     {% include 'navbar.html' %}
-    {% block content %}
-
-    {% endblock %}
-</body>
+    {% if messages %}
+      {% for message in messages %}
+        {{ message }}
+      {% endfor %}
+    {% endif %}
+    {% block content %} {% endblock %}
+  </body>
 </html>
