--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,4 +2,12 @@
   <h2>LOGO</h2>
 </a>
 
+<form method="GET" action="{% url 'home' %}">
+  <input type="text" name="q" placeholder="Search Rooms..." />
+</form>
+{% if request.user.is_authenticated %}
+<h4><a href="{% url 'logout' %}">Logout</a></h4>
+{% else %}
+<h4><a href="{% url 'login' %}">Login</a></h4>
+{% endif %}
 <hr />
