Added Participants Panel

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,46 +1,57 @@
 {% extends 'main.html' %} {% block content %}
 
 <style>
-  .main-container {
+  .room-container {
     display: grid;
-    grid-template-columns: 3fr, 1fr;
+    grid-template-columns: 3fr 1fr;
   }
 </style>
 
-<h2>{{room.name}}</h2>
-<p>{{room.description}}</p>
+<div class="room-container">
+  <div class="comments-container">
+    <h2>{{room.name}}</h2>
+    <p>{{room.description}}</p>
 
-{% if request.user == room.host %}
-<a href="{% url 'update-room' room.id %}">Edit</a> |
-<a href="{% url 'delete-room' room.id %}">Delete</a>
-{% endif %}
+    {% if request.user == room.host %}
+    <a href="{% url 'update-room' room.id %}">Edit</a> |
+    <a href="{% url 'delete-room' room.id %}">Delete</a>
+    {% endif %}
 
-<div class="main-container">
-  <div class="comments-wrapper">
-    <h3>Conversations</h3>
-    <hr />
-    {% for message in room_messages %}
-    <div>
-      <small>@{{message.user}} | {{message.created|timesince}} ago </small>
-      <p>{{message}}</p>
+    <div class="comments-wrapper">
+      <h3>Conversations</h3>
       <hr />
+      {% for message in room_messages %}
+      <div>
+        {% if request.user == message.user %}
+        <a href="{% url 'delete-message' message.id%}">Delete</a>
+        {% endif %}
+        <small>@{{message.user}} | {{message.created|timesince}} ago </small>
+        <p>{{message}}</p>
+        <hr />
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
-  </div>
 
-  {% if request.user.is_authenticated %}
-  <div class="comment-form">
-    <form method="POST" action="">
-      {% csrf_token %}
-      <input name="message_box" type="text" placeholder="Write a message..." />
-      <input type="submit" value="Submit" />
-    </form>
+    {% if request.user.is_authenticated %}
+    <div class="comment-form">
+      <form method="POST" action="">
+        {% csrf_token %}
+        <input
+          name="message_box"
+          type="text"
+          placeholder="Write a message..."
+        />
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+    {% endif %}
   </div>
-  {% endif %}
-
   <div class="participants-container">
     <h3>Participants</h3>
     <hr />
+    {% for participant in participants %}
+    <p>{{participant}}</p>
+    {% endfor %}
   </div>
 </div>
 
