Added User Profile

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -16,5 +16,6 @@
     {% include 'base/feed_component.html' %}
   </div>
 
-  {% include 'base/activity_log_component.html' %} {% endblock %}
+  {% include 'base/activity_log_component.html' %}
 </div>
+{% endblock %}
