--- a/base/templates/base/activity_log_component.html
+++ b/base/templates/base/activity_log_component.html
@@ -3,12 +3,13 @@
   <hr />
   {% for message in room_messages %}
   <div>
-    <small>@{{message.user}} {{message.created|timesince}} ago</small> <br />
-    <small
-      >Replied to post "<a href="{% url 'room' message.room.id %}"
-        >{{message.room}}</a
-      >"</small
-    >
+    <small>
+      <a href="{% url 'user-profile' message.user.id %}">@{{message.user}}</a> {{message.created|timesince}} ago
+    </small>
+    <br />
+    <small>
+      Replied to post "<a href="{% url 'room' message.room.id %}">{{message.room}}</a>"
+    </small>
     <p>{{message}}</p>
     <hr />
   </div>
