--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -3,7 +3,7 @@
     {% for room in rooms %}
     <li>
       <h4>-- <a href="{% url 'room' room.id %}">{{room.name}}</a></h4>
-      <span>by @{{room.host.username}} | </span>
+      <span>by <a href="{% url 'user-profile' room.host.id %}">@{{room.host.username}}</a> | </span>
       <small>{{room.topic.name}}</small>
       <hr />
     </li>
