--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -46,7 +46,8 @@
     </div>
     {% endif %}
   </div>
-  <div class="participants-container">
+
+  <div class="bg-light-lavender">
     <h3>Participants</h3>
     <hr />
     {% for participant in participants %}
