--- a/base/templates/base/topics_component.html
+++ b/base/templates/base/topics_component.html
@@ -1,10 +1,39 @@
-<h3 class="text-red">Browse Topics</h3>
-<hr />
-<div>
+<p class="text-sm font-medium mb-[2.3rem] text-subtle-purple">BROWSE TOPICS</p>
+<div class="flex justify-between text-sm font-medium mb-6 text-subtle-white/50">
+  {% if selected_topic == '' %}
+  <a class="text-orange-400" href="{% url 'home' %}">All</a>
+  <div
+    class="flex bg-orange-400 items-center justify-center rounded-sm w-[2.6rem] h-[1.6rem]"
+  >
+    <p class="text-subtle-white">{{total_room_count}}</p>
+  </div>
+  {% else %}
   <a href="{% url 'home' %}">All</a>
+  <div
+    class="flex bg-[#3F4154] items-center justify-center rounded-sm w-[2.6rem] h-[1.6rem]"
+  >
+    <p>{{total_room_count}}</p>
+  </div>
+  {% endif %}
 </div>
 {% for topic in topics %}
-<div>
+<div class="flex justify-between text-sm font-medium mb-6 text-subtle-white/50">
+  {% if topic.name == selected_topic %}
+  <a class="text-orange-400" href="{% url 'home' %}?q={{topic.name}}"
+    >{{topic.name}}</a
+  >
+  <div
+    class="flex bg-orange-400 items-center justify-center rounded-sm w-[2.6rem] h-[1.6rem]"
+  >
+    <p class="text-subtle-white">{{topic.rooms.all|length}}</p>
+  </div>
+  {% else %}
   <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
+  <div
+    class="flex bg-[#3F4154] items-center justify-center rounded-sm w-[2.6rem] h-[1.6rem]"
+  >
+    <p>{{topic.rooms.all|length}}</p>
+  </div>
+  {% endif %}
 </div>
 {% endfor %}
