--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -446,6 +446,11 @@ video {
   display: none;
 }
 
+* {
+  scrollbar-color: initial;
+  scrollbar-width: initial;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -558,24 +563,91 @@ video {
   position: static;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.fixed {
+  position: fixed;
 }
 
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+.left-0 {
+  left: 0px;
 }
 
-.mx-2\.5 {
-  margin-left: 0.625rem;
-  margin-right: 0.625rem;
+.right-0 {
+  right: 0px;
 }
 
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+.top-0 {
+  top: 0px;
+}
+
+.z-\[1000\] {
+  z-index: 1000;
+}
+
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
+}
+
+.mx-\[3px\] {
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
+.mx-\[5rem\] {
+  margin-left: 5rem;
+  margin-right: 5rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-\[2\.3rem\] {
+  margin-bottom: 2.3rem;
+}
+
+.ml-\[1rem\] {
+  margin-left: 1rem;
+}
+
+.ml-\[5rem\] {
+  margin-left: 5rem;
+}
+
+.mr-\[1rem\] {
+  margin-right: 1rem;
+}
+
+.mr-\[5rem\] {
+  margin-right: 5rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
+.mt-\[1\.5rem\] {
+  margin-top: 1.5rem;
 }
 
 .block {
@@ -590,29 +662,105 @@ video {
   display: grid;
 }
 
-.w-14 {
-  width: 3.5rem;
+.h-9 {
+  height: 2.25rem;
 }
 
-.w-32 {
-  width: 8rem;
+.h-\[1\.6rem\] {
+  height: 1.6rem;
 }
 
-.w-64 {
-  width: 16rem;
+.h-\[30px\] {
+  height: 30px;
 }
 
-.flex-auto {
-  flex: 1 1 auto;
+.h-\[520px\] {
+  height: 520px;
 }
 
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+.w-\[15rem\] {
+  width: 15rem;
 }
 
-.bg-\[2C2C37\] {
-  background-color: 2C2C37;
+.w-\[2\.6rem\] {
+  width: 2.6rem;
+}
+
+.w-\[35rem\] {
+  width: 35rem;
+}
+
+.w-\[60px\] {
+  width: 60px;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.min-w-96 {
+  min-width: 24rem;
+}
+
+.flex-none {
+  flex: none;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.text-wrap {
+  text-wrap: wrap;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-\[3px\] {
+  border-radius: 3px;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.border-\[0\.3px\] {
+  border-width: 0.3px;
+}
+
+.border-t-\[1px\] {
+  border-top-width: 1px;
+}
+
+.border-subtle-purple {
+  --tw-border-opacity: 1;
+  border-color: rgb(95 94 115 / var(--tw-border-opacity));
 }
 
 .bg-\[\#2C2C37\] {
@@ -620,31 +768,254 @@ video {
   background-color: rgb(44 44 55 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#3F4054\] {
+.bg-\[\#3F4154\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 65 84 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#52526D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 82 109 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#525369\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(82 83 105 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#6A6A95\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 106 149 / var(--tw-bg-opacity));
+}
+
+.bg-light-lavender {
+  --tw-bg-opacity: 1;
+  background-color: rgb(106 106 149 / var(--tw-bg-opacity));
+}
+
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+
+.bg-theme-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 45 56 / var(--tw-bg-opacity));
+}
+
+.bg-theme-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(63 64 84 / var(--tw-bg-opacity));
 }
 
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+.p-1 {
+  padding: 0.25rem;
 }
 
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
+.p-2 {
+  padding: 0.5rem;
 }
 
-.text-red-600 {
-  --tw-text-opacity: 1;
-  color: rgb(220 38 38 / var(--tw-text-opacity));
+.p-3 {
+  padding: 0.75rem;
 }
 
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
-.underline {
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pt-\[4rem\] {
+  padding-top: 4rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.text-\[\#4B4A5D\] {
+  --tw-text-opacity: 1;
+  color: rgb(75 74 93 / var(--tw-text-opacity));
+}
+
+.text-\[\#78777C\] {
+  --tw-text-opacity: 1;
+  color: rgb(120 119 124 / var(--tw-text-opacity));
+}
+
+.text-\[\#D8DAE8\] {
+  --tw-text-opacity: 1;
+  color: rgb(216 218 232 / var(--tw-text-opacity));
+}
+
+.text-neutral-300 {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 212 / var(--tw-text-opacity));
+}
+
+.text-orange-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.text-subtle-purple {
+  --tw-text-opacity: 1;
+  color: rgb(95 94 115 / var(--tw-text-opacity));
+}
+
+.text-subtle-white {
+  --tw-text-opacity: 1;
+  color: rgb(216 218 232 / var(--tw-text-opacity));
+}
+
+.text-subtle-white\/50 {
+  color: rgb(216 218 232 / 0.5);
+}
+
+.text-subtle-white\/75 {
+  color: rgb(216 218 232 / 0.75);
+}
+
+.subpixel-antialiased {
+  -webkit-font-smoothing: auto;
+  -moz-osx-font-smoothing: auto;
+}
+
+.placeholder-subtle-white\/25::-moz-placeholder {
+  color: rgb(216 218 232 / 0.25);
+}
+
+.placeholder-subtle-white\/25::placeholder {
+  color: rgb(216 218 232 / 0.25);
+}
+
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track {
+  background-color: var(--scrollbar-track);
+  border-radius: var(--scrollbar-track-radius);
+}
+
+.scrollbar-thin::-webkit-scrollbar-track:hover {
+  background-color: var(--scrollbar-track-hover, var(--scrollbar-track));
+}
+
+.scrollbar-thin::-webkit-scrollbar-track:active {
+  background-color: var(--scrollbar-track-active, var(--scrollbar-track-hover, var(--scrollbar-track)));
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-thumb);
+  border-radius: var(--scrollbar-thumb-radius);
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-thumb-hover, var(--scrollbar-thumb));
+}
+
+.scrollbar-thin::-webkit-scrollbar-thumb:active {
+  background-color: var(--scrollbar-thumb-active, var(--scrollbar-thumb-hover, var(--scrollbar-thumb)));
+}
+
+.scrollbar-thin::-webkit-scrollbar-corner {
+  background-color: var(--scrollbar-corner);
+  border-radius: var(--scrollbar-corner-radius);
+}
+
+.scrollbar-thin::-webkit-scrollbar-corner:hover {
+  background-color: var(--scrollbar-corner-hover, var(--scrollbar-corner));
+}
+
+.scrollbar-thin::-webkit-scrollbar-corner:active {
+  background-color: var(--scrollbar-corner-active, var(--scrollbar-corner-hover, var(--scrollbar-corner)));
+}
+
+.scrollbar-thin {
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial);
+}
+
+.scrollbar-thin::-webkit-scrollbar {
+  display: block;
+  width: 8px;
+  height: 8px;
+}
+
+.hover\:scale-\[1\.02\]:hover {
+  --tw-scale-x: 1.02;
+  --tw-scale-y: 1.02;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:underline:hover {
   text-decoration-line: underline;
 }
