--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %} {% block content %}
 
 <div class="flex justify-center">
-  <div class="fixed left-0 ml-[5rem] w-[15rem]">
+  <div class="fixed left-[5rem] w-[15rem]">
     {% include 'base/topics_component.html' %}
   </div>
 
@@ -9,7 +9,7 @@
     {% include 'base/feed_component.html' %}
   </div>
 
-  <div class="fixed right-0 mr-[5rem] w-[15rem]">
+  <div class="fixed right-[5rem] w-[15rem]">
     {% include 'base/activity_log_component.html' %}
   </div>
 </div>
