--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -559,6 +559,40 @@ video {
   --tw-contain-style:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 .static {
   position: static;
 }
@@ -577,6 +611,34 @@ video {
 
 .top-0 {
   top: 0px;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.right-\[10px\] {
+  right: 10px;
+}
+
+.right-\[50px\] {
+  right: 50px;
+}
+
+.right-\[5rem\] {
+  right: 5rem;
+}
+
+.right-\[6rem\] {
+  right: 6rem;
+}
+
+.left-\[5rem\] {
+  left: 5rem;
 }
 
 .z-\[1000\] {
@@ -650,6 +712,10 @@ video {
   margin-top: 1.5rem;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .block {
   display: block;
 }
@@ -678,6 +744,14 @@ video {
   height: 520px;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-full {
+  height: 100%;
+}
+
 .w-\[15rem\] {
   width: 15rem;
 }
@@ -698,6 +772,10 @@ video {
   width: 100%;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
 .min-w-96 {
   min-width: 24rem;
 }
@@ -716,6 +794,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .overflow-y-auto {
@@ -811,6 +893,11 @@ video {
 .bg-theme-secondary {
   --tw-bg-opacity: 1;
   background-color: rgb(63 64 84 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#2B2D31\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 45 49 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -937,6 +1024,10 @@ video {
   color: rgb(216 218 232 / 0.75);
 }
 
+.text-orange-400\/50 {
+  color: rgb(251 146 60 / 0.5);
+}
+
 .subpixel-antialiased {
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
@@ -1014,6 +1105,23 @@ video {
   --tw-scale-x: 1.02;
   --tw-scale-y: 1.02;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:text-orange-400\/50:hover {
+  color: rgb(251 146 60 / 0.5);
+}
+
+.hover\:text-orange-400\/75:hover {
+  color: rgb(251 146 60 / 0.75);
+}
+
+.hover\:text-orange-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(253 186 116 / var(--tw-text-opacity));
+}
+
+.hover\:text-orange-400\/30:hover {
+  color: rgb(251 146 60 / 0.3);
 }
 
 .hover\:underline:hover {
