--- a/base/templates/base/participants_component.html
+++ b/base/templates/base/participants_component.html
@@ -1,9 +1,9 @@
 <div class="overflow-y-auto scrollbar-thin rounded bg-theme-secondary">
-  <div class="flex font-bold text-xs px-3 py-2 bg-light-lavender">
-    <p class="text-subtle-white bg-light-lavender mr-1 tracking-wide">
+  <div class="flex text-xs px-3 py-2 bg-light-lavender">
+    <p class="text-subtle-white font-bold bg-light-lavender mr-1 tracking-wide">
       PARTICIPANTS
     </p>
-    <p class="text-orange-400">({{participant_count}} joined)</p>
+    <p class="font-semibold text-orange-400">({{participant_count}} joined)</p>
   </div>
 
   <hr />
