--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,16 @@
+{% load static %}
 <div class="flex justify-between items-center h-15 py-3 bg-theme-secondary">
   <div class="flex-none mx-[5rem]">
     <a href="{% url 'home'%}">
-      <p class="font-bold text-lg text-[#D8DAE8]">BrainWave</p>
+      <div class="flex items-center">
+        <img
+          src="{% static 'images/brainwave-logo-2.png' %}"
+          alt="Image not loaded"
+          class="w-11 h-11 mr-3"
+        />
+
+        <p class="font-bold text-lg text-[#D8DAE8]">brainwave</p>
+      </div>
     </a>
   </div>
 
