--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -16,23 +16,48 @@
     <p class="text-xs font-bold text-[#4B4A5D]">No rooms available</p>
     {% endif %}
   </div>
+  {% if request.user.is_authenticated %}
   <a href="{% url 'create-room' %}">
-    <div class="flex-none rounded-full bg-orange-500">
-      {% if request.user.is_authenticated %}
-      <p class="text-sm font-semibold px-3 py-2 text-center text-subtle-white">
-        + Create Room
+    <div class="flex-none">
+      <p
+        class="group flex items-center justify-center font-semibold text-subtle-white bg-orange-500 w-9 h-9 rounded-full transition-all duration-300 hover:w-[100px]"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 16 16"
+          fill="currentColor"
+          class="w-5 h-5"
+        >
+          <path
+            d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5v-3.5Z"
+          />
+        </svg>
+        <span
+          class="mr-2 ml-1 overflow-hidden transition-all duration-300 whitespace-nowrap hidden group-hover:block mb-[1px]"
+          >Create</span
+        >
       </p>
-      {% endif %}
     </div>
+    <!-- <div class="relative flex items-center">
+      <div class="group flex items-center justify-center w-12 h-12 bg-blue-500 text-white rounded-full transition-all duration-300 hover:w-40">
+          <i class="fas fa-plus"></i>
+          <span class="ml-2 whitespace-nowrap opacity-0 group-hover:opacity-100 group-hover:ml-4 transition-all duration-300">
+              Create
+          </span>
+      </div>
+    </div> -->
   </a>
+  {% endif %}
 </div>
 
 {% for room in rooms %}
 <div
-  class="my-5 py-3 px-4 rounded-md bg-theme-secondary hover:scale-[1.02] transition-transform duration-300"
+  class="my-5 py-3 px-4 rounded-md bg-theme-secondary hover:scale-[1.01] transition-transform duration-300"
 >
   <div class="flex justify-between">
-    <p class="mb-5 text-subtle-white text-lg font-semibold hover:underline">
+    <p
+      class="mb-5 text-subtle-white text-xl transition-all duration-300 hover:text-orange-400"
+    >
       <a href="{% url 'room' room.id %}">{{room.name}}</a>
     </p>
     <p class="mb-3 text-xs font-medium text-subtle-white">
