--- a/static/styles/input.css
+++ b/static/styles/input.css
@@ -1,3 +1,6 @@
+/* Application Font */
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
