--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,6 +1,8 @@
-/*
-! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com
-*/
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
+/* Application Font */
+
+/* ! tailwindcss v3.4.10 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -46,7 +48,7 @@ html,
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: DM Sans, sans-serif;
   /* 4 */
   font-feature-settings: normal;
   /* 5 */
@@ -446,12 +448,12 @@ video {
   display: none;
 }
 
-* {
+*{
   scrollbar-color: initial;
   scrollbar-width: initial;
 }
 
-*, ::before, ::after {
+*, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -505,7 +507,7 @@ video {
   --tw-contain-style:  ;
 }
 
-::backdrop {
+::backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -559,646 +561,1001 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
+.container{
   width: 100%;
 }
 
-@media (min-width: 640px) {
-  .container {
+@media (min-width: 640px){
+  .container{
     max-width: 640px;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
+@media (min-width: 768px){
+  .container{
     max-width: 768px;
   }
 }
 
-@media (min-width: 1024px) {
-  .container {
+@media (min-width: 1024px){
+  .container{
     max-width: 1024px;
   }
 }
 
-@media (min-width: 1280px) {
-  .container {
+@media (min-width: 1280px){
+  .container{
     max-width: 1280px;
   }
 }
 
-@media (min-width: 1536px) {
-  .container {
+@media (min-width: 1536px){
+  .container{
     max-width: 1536px;
   }
 }
 
-.static {
+.static{
   position: static;
 }
 
-.fixed {
+.fixed{
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.relative {
+.relative{
   position: relative;
 }
 
-.bottom-0 {
-  bottom: 0px;
+.bottom-\[15rem\]{
+  bottom: 15rem;
 }
 
-.left-0 {
+.left-0{
   left: 0px;
 }
 
-.left-\[5rem\] {
+.left-\[5rem\]{
   left: 5rem;
 }
 
-.right-\[5rem\] {
+.right-\[5rem\]{
   right: 5rem;
 }
 
-.top-0 {
+.top-0{
   top: 0px;
 }
 
-.z-\[1000\] {
+.z-\[1000\]{
   z-index: 1000;
 }
 
-.m-1 {
+.m-1{
   margin: 0.25rem;
 }
 
-.m-3 {
+.m-2{
+  margin: 0.5rem;
+}
+
+.m-3{
   margin: 0.75rem;
 }
 
-.m-auto {
-  margin: auto;
+.m-5{
+  margin: 1.25rem;
 }
 
-.m-\[4\%\] {
-  margin: 4%;
+.m-4{
+  margin: 1rem;
 }
 
-.mx-\[3px\] {
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-6{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.mx-\[3px\]{
   margin-left: 3px;
   margin-right: 3px;
 }
 
-.mx-\[5rem\] {
+.mx-\[5rem\]{
   margin-left: 5rem;
   margin-right: 5rem;
 }
 
-.mx-auto {
+.mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.my-3 {
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-3{
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
 
-.my-5 {
+.my-5{
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
 
-.my-\[4\%\] {
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.my-\[4\%\]{
   margin-top: 4%;
   margin-bottom: 4%;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.my-\[5\%\]{
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.my-\[2px\]{
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-\[2\.3rem\] {
-  margin-bottom: 2.3rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
-.ml-\[5rem\] {
-  margin-left: 5rem;
-}
-
-.mr-1 {
+.mx-1{
+  margin-left: 0.25rem;
   margin-right: 0.25rem;
 }
 
-.mr-3 {
+.mx-3{
+  margin-left: 0.75rem;
   margin-right: 0.75rem;
 }
 
-.mr-\[1rem\] {
-  margin-right: 1rem;
+.mb-1{
+  margin-bottom: 0.25rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.mb-16{
+  margin-bottom: 4rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-\[4\%\] {
-  margin-top: 4%;
-}
-
-.mb-2 {
+.mb-2{
   margin-bottom: 0.5rem;
 }
 
-.mt-4 {
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mb-\[1px\]{
+  margin-bottom: 1px;
+}
+
+.mb-\[2\.3rem\]{
+  margin-bottom: 2.3rem;
+}
+
+.ml-1{
+  margin-left: 0.25rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
+}
+
+.ml-3{
+  margin-left: 0.75rem;
+}
+
+.ml-\[5rem\]{
+  margin-left: 5rem;
+}
+
+.mr-1{
+  margin-right: 0.25rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
+}
+
+.mr-3{
+  margin-right: 0.75rem;
+}
+
+.mr-\[1rem\]{
+  margin-right: 1rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-4{
   margin-top: 1rem;
 }
 
-.block {
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mb-\[2px\]{
+  margin-bottom: 2px;
+}
+
+.ml-4{
+  margin-left: 1rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
+}
+
+.mr-4{
+  margin-right: 1rem;
+}
+
+.block{
   display: block;
 }
 
-.flex {
+.flex{
   display: flex;
 }
 
-.h-10 {
+.hidden{
+  display: none;
+}
+
+.size-4{
+  width: 1rem;
+  height: 1rem;
+}
+
+.size-5{
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.h-10{
   height: 2.5rem;
 }
 
-.h-11 {
+.h-11{
   height: 2.75rem;
 }
 
-.h-9 {
+.h-12{
+  height: 3rem;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.h-9{
   height: 2.25rem;
 }
 
-.h-\[1\.6rem\] {
+.h-\[1\.6rem\]{
   height: 1.6rem;
 }
 
-.h-\[100px\] {
+.h-\[100px\]{
   height: 100px;
 }
 
-.h-\[30px\] {
+.h-\[30px\]{
   height: 30px;
 }
 
-.h-\[35\.5rem\] {
+.h-\[35\.5rem\]{
   height: 35.5rem;
 }
 
-.h-\[35px\] {
+.h-\[35px\]{
   height: 35px;
 }
 
-.h-\[82\%\] {
+.h-\[40rem\]{
+  height: 40rem;
+}
+
+.h-\[82\%\]{
   height: 82%;
 }
 
-.h-full {
+.h-auto{
+  height: auto;
+}
+
+.h-full{
   height: 100%;
 }
 
-.w-11 {
+.h-\[45rem\]{
+  height: 45rem;
+}
+
+.h-\[41rem\]{
+  height: 41rem;
+}
+
+.w-11{
   width: 2.75rem;
 }
 
-.w-\[15rem\] {
-  width: 15rem;
+.w-12{
+  width: 3rem;
 }
 
-.w-\[2\.6rem\] {
-  width: 2.6rem;
+.w-5{
+  width: 1.25rem;
 }
 
-.w-\[250px\] {
-  width: 250px;
-}
-
-.w-\[35rem\] {
-  width: 35rem;
-}
-
-.w-\[45\%\] {
-  width: 45%;
-}
-
-.w-\[60px\] {
-  width: 60px;
-}
-
-.w-\[90px\] {
-  width: 90px;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-64 {
+.w-64{
   width: 16rem;
 }
 
-.min-w-96 {
-  min-width: 24rem;
+.w-9{
+  width: 2.25rem;
 }
 
-.flex-none {
+.w-\[15rem\]{
+  width: 15rem;
+}
+
+.w-\[2\.6rem\]{
+  width: 2.6rem;
+}
+
+.w-\[250px\]{
+  width: 250px;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[30rem\]{
+  width: 30rem;
+}
+
+.w-\[35rem\]{
+  width: 35rem;
+}
+
+.w-\[45\%\]{
+  width: 45%;
+}
+
+.w-\[60px\]{
+  width: 60px;
+}
+
+.w-\[90px\]{
+  width: 90px;
+}
+
+.w-full{
+  width: 100%;
+}
+
+.w-\[50\%\]{
+  width: 50%;
+}
+
+.w-32{
+  width: 8rem;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.w-\[5rem\]{
+  width: 5rem;
+}
+
+.w-\[4rem\]{
+  width: 4rem;
+}
+
+.w-\[3rem\]{
+  width: 3rem;
+}
+
+.max-w-32{
+  max-width: 8rem;
+}
+
+.max-w-80{
+  max-width: 20rem;
+}
+
+.max-w-\[20rem\]{
+  max-width: 20rem;
+}
+
+.flex-none{
   flex: none;
 }
 
-.items-center {
+.items-center{
   align-items: center;
 }
 
-.justify-center {
+.justify-center{
   justify-content: center;
 }
 
-.justify-between {
+.justify-between{
   justify-content: space-between;
 }
 
-.overflow-hidden {
+.gap-4{
+  gap: 1rem;
+}
+
+.overflow-hidden{
   overflow: hidden;
 }
 
-.overflow-y-auto {
+.overflow-y-auto{
   overflow-y: auto;
 }
 
-.text-wrap {
+.whitespace-nowrap{
+  white-space: nowrap;
+}
+
+.text-wrap{
   text-wrap: wrap;
 }
 
-.rounded {
+.break-words{
+  overflow-wrap: break-word;
+}
+
+.rounded{
   border-radius: 0.25rem;
 }
 
-.rounded-\[3px\] {
+.rounded-\[3px\]{
   border-radius: 3px;
 }
 
-.rounded-full {
+.rounded-full{
   border-radius: 9999px;
 }
 
-.rounded-lg {
+.rounded-lg{
   border-radius: 0.5rem;
 }
 
-.rounded-md {
+.rounded-md{
   border-radius: 0.375rem;
 }
 
-.rounded-sm {
+.rounded-sm{
   border-radius: 0.125rem;
 }
 
-.rounded-xl {
+.rounded-xl{
   border-radius: 0.75rem;
 }
 
-.border {
+.border{
   border-width: 1px;
 }
 
-.border-\[0\.3px\] {
+.border-\[0\.3px\]{
   border-width: 0.3px;
 }
 
-.border-t-\[1px\] {
+.border-l-\[1px\]{
+  border-left-width: 1px;
+}
+
+.border-t-\[1px\]{
   border-top-width: 1px;
 }
 
-.border-subtle-purple {
+.border-none{
+  border-style: none;
+}
+
+.border-orange-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(251 146 60 / var(--tw-border-opacity));
+}
+
+.border-subtle-purple{
   --tw-border-opacity: 1;
   border-color: rgb(95 94 115 / var(--tw-border-opacity));
 }
 
-.bg-\[\#2C2C37\] {
+.border-subtle-white\/75{
+  border-color: rgb(216 218 232 / 0.75);
+}
+
+.bg-\[\#2C2C37\]{
   --tw-bg-opacity: 1;
   background-color: rgb(44 44 55 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#3F4154\] {
+.bg-\[\#3F4154\]{
   --tw-bg-opacity: 1;
   background-color: rgb(63 65 84 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#52526D\] {
+.bg-\[\#52526D\]{
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 109 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#525369\] {
+.bg-\[\#525369\]{
   --tw-bg-opacity: 1;
   background-color: rgb(82 83 105 / var(--tw-bg-opacity));
 }
 
-.bg-light-lavender {
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-light-lavender{
   --tw-bg-opacity: 1;
   background-color: rgb(106 106 149 / var(--tw-bg-opacity));
 }
 
-.bg-orange-500 {
+.bg-orange-500{
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
-.bg-theme-primary {
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-theme-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(44 45 56 / var(--tw-bg-opacity));
 }
 
-.bg-theme-secondary {
+.bg-theme-secondary{
   --tw-bg-opacity: 1;
   background-color: rgb(63 64 84 / var(--tw-bg-opacity));
 }
 
-.p-1 {
+.bg-transparent{
+  background-color: transparent;
+}
+
+.bg-opacity-20{
+  --tw-bg-opacity: 0.2;
+}
+
+.p-1{
   padding: 0.25rem;
 }
 
-.p-2 {
+.p-2{
   padding: 0.5rem;
 }
 
-.p-3 {
+.p-3{
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-5{
+  padding: 1.25rem;
 }
 
-.px-3 {
+.px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
 
-.px-4 {
+.px-4{
   padding-left: 1rem;
   padding-right: 1rem;
 }
 
-.px-5 {
+.px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 
-.py-1 {
+.py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 
-.py-2 {
+.py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.py-3 {
+.py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-5 {
+.py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
 
-.pl-1 {
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
+.pl-1{
   padding-left: 0.25rem;
 }
 
-.pl-4 {
+.pl-4{
   padding-left: 1rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
+.pt-32{
+  padding-top: 8rem;
 }
 
-.pt-\[6rem\] {
+.pt-\[6rem\]{
   padding-top: 6rem;
 }
 
-.text-center {
+.pb-16{
+  padding-bottom: 4rem;
+}
+
+.pb-32{
+  padding-bottom: 8rem;
+}
+
+.pb-36{
+  padding-bottom: 9rem;
+}
+
+.pb-\[20rem\]{
+  padding-bottom: 20rem;
+}
+
+.pb-\[30rem\]{
+  padding-bottom: 30rem;
+}
+
+.pb-\[22rem\]{
+  padding-bottom: 22rem;
+}
+
+.pb-\[15rem\]{
+  padding-bottom: 15rem;
+}
+
+.pb-\[10rem\]{
+  padding-bottom: 10rem;
+}
+
+.pb-\[8rem\]{
+  padding-bottom: 8rem;
+}
+
+.pb-\[9rem\]{
+  padding-bottom: 9rem;
+}
+
+.pb-\[8\.5rem\]{
+  padding-bottom: 8.5rem;
+}
+
+.text-center{
   text-align: center;
 }
 
-.text-lg {
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-\[13px\]{
+  font-size: 13px;
+}
+
+.text-lg{
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-sm {
+.text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-xl {
+.text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.font-bold {
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.font-bold{
   font-weight: 700;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.font-light {
+.font-light{
   font-weight: 300;
 }
 
-.leading-none {
+.font-medium{
+  font-weight: 500;
+}
+
+.font-semibold{
+  font-weight: 600;
+}
+
+.leading-5{
+  line-height: 1.25rem;
+}
+
+.leading-none{
   line-height: 1;
 }
 
-.tracking-wide {
+.tracking-wide{
   letter-spacing: 0.025em;
 }
 
-.text-\[\#4B4A5D\] {
+.text-\[\#4B4A5D\]{
   --tw-text-opacity: 1;
   color: rgb(75 74 93 / var(--tw-text-opacity));
 }
 
-.text-\[\#78777C\] {
+.text-\[\#78777C\]{
   --tw-text-opacity: 1;
   color: rgb(120 119 124 / var(--tw-text-opacity));
 }
 
-.text-\[\#D8DAE8\] {
+.text-\[\#D8DAE8\]{
   --tw-text-opacity: 1;
   color: rgb(216 218 232 / var(--tw-text-opacity));
 }
 
-.text-neutral-300 {
+.text-neutral-300{
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity));
 }
 
-.text-orange-400 {
+.text-orange-400{
   --tw-text-opacity: 1;
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
-.text-subtle-purple {
+.text-red-400{
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-subtle-purple{
   --tw-text-opacity: 1;
   color: rgb(95 94 115 / var(--tw-text-opacity));
 }
 
-.text-subtle-white {
+.text-subtle-white{
   --tw-text-opacity: 1;
   color: rgb(216 218 232 / var(--tw-text-opacity));
 }
 
-.text-subtle-white\/50 {
+.text-subtle-white\/50{
   color: rgb(216 218 232 / 0.5);
 }
 
-.text-subtle-white\/75 {
+.text-subtle-white\/75{
   color: rgb(216 218 232 / 0.75);
 }
 
-.subpixel-antialiased {
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.underline{
+  text-decoration-line: underline;
+}
+
+.subpixel-antialiased{
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
 }
 
-.placeholder-subtle-white\/25::-moz-placeholder {
-  color: rgb(216 218 232 / 0.25);
+.opacity-0{
+  opacity: 0;
 }
 
-.placeholder-subtle-white\/25::placeholder {
-  color: rgb(216 218 232 / 0.25);
+.outline-none{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
-.transition-transform {
+.backdrop-blur-lg{
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform{
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
-.duration-300 {
+.duration-300{
   transition-duration: 300ms;
 }
 
-.scrollbar-thin::-webkit-scrollbar-track {
+.duration-200{
+  transition-duration: 200ms;
+}
+
+.scrollbar-thin::-webkit-scrollbar-track{
   background-color: var(--scrollbar-track);
   border-radius: var(--scrollbar-track-radius);
 }
 
-.scrollbar-thin::-webkit-scrollbar-track:hover {
+.scrollbar-thin::-webkit-scrollbar-track:hover{
   background-color: var(--scrollbar-track-hover, var(--scrollbar-track));
 }
 
-.scrollbar-thin::-webkit-scrollbar-track:active {
+.scrollbar-thin::-webkit-scrollbar-track:active{
   background-color: var(--scrollbar-track-active, var(--scrollbar-track-hover, var(--scrollbar-track)));
 }
 
-.scrollbar-thin::-webkit-scrollbar-thumb {
+.scrollbar-thin::-webkit-scrollbar-thumb{
   background-color: var(--scrollbar-thumb);
   border-radius: var(--scrollbar-thumb-radius);
 }
 
-.scrollbar-thin::-webkit-scrollbar-thumb:hover {
+.scrollbar-thin::-webkit-scrollbar-thumb:hover{
   background-color: var(--scrollbar-thumb-hover, var(--scrollbar-thumb));
 }
 
-.scrollbar-thin::-webkit-scrollbar-thumb:active {
+.scrollbar-thin::-webkit-scrollbar-thumb:active{
   background-color: var(--scrollbar-thumb-active, var(--scrollbar-thumb-hover, var(--scrollbar-thumb)));
 }
 
-.scrollbar-thin::-webkit-scrollbar-corner {
+.scrollbar-thin::-webkit-scrollbar-corner{
   background-color: var(--scrollbar-corner);
   border-radius: var(--scrollbar-corner-radius);
 }
 
-.scrollbar-thin::-webkit-scrollbar-corner:hover {
+.scrollbar-thin::-webkit-scrollbar-corner:hover{
   background-color: var(--scrollbar-corner-hover, var(--scrollbar-corner));
 }
 
-.scrollbar-thin::-webkit-scrollbar-corner:active {
+.scrollbar-thin::-webkit-scrollbar-corner:active{
   background-color: var(--scrollbar-corner-active, var(--scrollbar-corner-hover, var(--scrollbar-corner)));
 }
 
-.scrollbar-thin {
+.scrollbar-thin{
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial);
 }
 
-.scrollbar-thin::-webkit-scrollbar {
+.scrollbar-thin::-webkit-scrollbar{
   display: block;
   width: 8px;
   height: 8px;
 }
 
-.hover\:scale-\[1\.02\]:hover {
+.group:hover .group-hover\:ml-4{
+  margin-left: 1rem;
+}
+
+.group:hover .group-hover\:block{
+  display: block;
+}
+
+.group:hover .group-hover\:opacity-100{
+  opacity: 1;
+}
+
+.hover\:w-40:hover{
+  width: 10rem;
+}
+
+.hover\:w-\[100px\]:hover{
+  width: 100px;
+}
+
+.hover\:scale-\[1\.02\]:hover{
   --tw-scale-x: 1.02;
   --tw-scale-y: 1.02;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:text-orange-400\/75:hover {
+.hover\:scale-\[1\.01\]:hover{
+  --tw-scale-x: 1.01;
+  --tw-scale-y: 1.01;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:text-orange-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.hover\:text-orange-400\/75:hover{
   color: rgb(251 146 60 / 0.75);
 }
 
-.hover\:underline:hover {
+.hover\:text-red-400:hover{
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.hover\:underline:hover{
   text-decoration-line: underline;
 }
